Add Contrasting Cursors

--- a/data/interface/index.html
+++ b/data/interface/index.html
@@ -16,17 +16,18 @@
 				  </div>
 				</div>
 			</div>
-			<div id="cursor"></div>
-			<svg id="crosshair" width="16" height="16" viewBox="0 0 38 38" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:square;stroke-linejoin:round;stroke-miterlimit:1.5;">
-				<g transform="matrix(1,0,0,1,-980.828,-488.502)">
-					<g transform="matrix(1,0,0,1,-2.24712,0)">
-						<path d="M984.49,507.188L1019.03,507.188" style="fill:none;stroke:rgba(0,0,0,0.4);stroke-width:3px;"/>
-					</g>
-					<g transform="matrix(6.12323e-17,1,-1,6.12323e-17,1506.7,-494.573)">
-						<path d="M984.49,507.188L1019.03,507.188" style="fill:none;stroke:rgba(0,0,0,0.4);stroke-width:3px;"/>
-					</g>
-				</g>
-			</svg>
+			<div id="cursor">
+				<div class="cursor brush">
+					<div></div>
+				</div>
+				  
+				<div class="cursor crosshair">
+				<div></div>
+				<div></div>
+				<div></div>
+				<div></div>
+				</div>
+			</div>
 			<canvas id="draw-on-page-canvas"></canvas>
 			<div class="controls">
 				<svg width="23" viewBox="0 0 42 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;margin:22px auto 12px;display:block;">
